# livekit-agents

livekit-plugins/livekit-plugins-openai/livekit/plugins/openai/: stt.py  tts.py
livekit-plugins/livekit-plugins-openai/tests/: test_stt.py  test_tts.py
livekit-plugins/livekit-plugins-whisperx/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-whisperx/livekit/plugins/whisperx/: .gitkeep  __init__.py  stt.py  version.py
livekit-plugins/livekit-plugins-whisperx/tests/: test_whisperx_stt.py
